# flext-tests

./: .dmypy.json  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  base.mk  conftest.py  custom.mk  custom.mk.rej  mkdocs.yml  pyproject.toml  workspace_custom.mk
.agents/: provider.toml
.agents/commands/: flext-law.md
.agents/skills/: flext-context-routing  flext-inviolable-rules  flext-law
.claude/: settings.json
.flext-deps/: flext-infra
.scope/: config.toml
docs/: index.md
docs/api-reference/: README.md
guides/: README.md
src/flext_tests/: __init__.py  __init__.pyi  __unit__.py  __version__.py  _config.py  _exports.py  _models.py  _settings.py  base.py  builders.py  conftest_plugin.py  constants.py  docker.py  domains.py  enforcement.py  factories.py  files.py  kube.py  matchers.py  models.py  protocols.py  service.py  settings.py  tmatchers.py  typings.py  utilities.py  validator.py
src/flext_tests/_constants/: __init__.py  __unit__.py  data_cases.py  docker.py  files.py  make.py  matcher.py  validator.py
src/flext_tests/_constants/_validator_parts/: __init__.py  __unit__.py  validator_part_01.py  validator_part_02.py  validator_part_03.py
src/flext_tests/_docker_parts/: __init__.py  __unit__.py  docker_part_01.py  docker_part_02.py  docker_part_03.py  docker_part_04.py  docker_part_05.py  docker_part_06.py
src/flext_tests/_domains_parts/: __init__.py  __unit__.py  domains_part_01.py  domains_part_02.py  domains_part_03.py
src/flext_tests/_fixtures/: __init__.py  __unit__.py  enforcement.py  markdown_validation.py  project_metadata.py  settings.py
src/flext_tests/_fixtures/_enforcement_parts/: __init__.py  __unit__.py  build.py  config.py  discovery.py  hooks.py  items.py  namespace.py  registry.py  validators.py
src/flext_tests/_models/: __init__.py  __unit__.py  base.py  batch.py  docker.py  domains.py  filesystem.py  make.py  matchers.py  validator.py  workspace_cleanup.py
src/flext_tests/_models/_filesystem_parts/: __init__.py  __unit__.py  filesystem_part_01.py  filesystem_part_02.py
src/flext_tests/_models/_matchers_parts/: __init__.py  __unit__.py  matchers_part_01.py  matchers_part_02.py  matchers_part_03.py
src/flext_tests/_protocols/: __init__.py  __unit__.py  docker.py  enforcement.py  filesystem.py  make.py  matchers.py  valuefactory.py  workspace_cleanup.py
src/flext_tests/_typings/: __init__.py  __unit__.py  base.py  files.py  guards.py  make.py  matchers.py
src/flext_tests/_utilities/: __init__.py  __unit__.py  _payload.py  assertions.py  badobjects.py  config.py  constants.py  container.py  context.py  deepmatch.py  docker.py  domain.py  exception.py  factory.py  files.py  fixtures_dsl.py  generic.py  handler.py  length.py  make.py  make_contract.py  make_parsing.py  make_registry.py  make_rendering.py  matchers.py  parser.py  payload.py  registry.py  result.py  settings.py  testcase.py  testcontext.py  validation.py  validator.py  workspace_cleanup.py  workspace_cleanup_git.py  workspace_cleanup_inspect.py  workspace_cleanup_paths.py  workspace_cleanup_plan.py
src/flext_tests/_utilities/_files/: __init__.py  __unit__.py  _assertions.py  _batch.py  _comparison.py  _contexts.py  _creation.py  _info.py  _lifecycle.py  _reading.py
src/flext_tests/_utilities/_files/_comparison_parts/: __init__.py  __unit__.py  comparison_part_01.py  comparison_part_02.py
src/flext_tests/_utilities/_files/_creation_parts/: __init__.py  __unit__.py  creation_part_01.py  creation_part_02.py  creation_part_03.py
src/flext_tests/_utilities/_make_parts/: __init__.py  __unit__.py  make_contract_part_01.py  make_contract_part_02.py  make_parsing_part_01.py  make_parsing_part_02.py  make_registry_part_01.py  make_registry_part_02.py  make_registry_part_03.py  make_rendering_part_01.py  make_rendering_part_02.py
src/flext_tests/_utilities/_matchers/: __init__.py  __unit__.py  _assertions.py  _containment.py  _result.py  _rules.py  _rules_dispatch.py  _scope.py  _that.py  _typeguards.py
src/flext_tests/_utilities/_matchers/_result_parts/: __init__.py  __unit__.py  result_part_01.py  result_part_02.py  result_part_03.py
src/flext_tests/_validator/: __init__.py  __unit__.py  bypass.py  imports.py  layer.py  markdown.py  models.py  settings.py  tests.py  types.py
src/flext_tests/_validator/_markdown_parts/: __init__.py  __unit__.py  markdown_part_01.py  markdown_part_02.py
src/flext_tests/_validator/_orchestration_parts/: __init__.py  __unit__.py  validator_part_01.py  validator_part_02.py
src/flext_tests/_validator/_settings_parts/: __init__.py  __unit__.py  settings_part_01.py  settings_part_02.py
src/flext_tests/_validator/_types_parts/: __init__.py  __unit__.py  types_part_01.py  types_part_02.py
src/flext_tests/config/: tests.yaml
tests/: __init__.py  __init__.pyi  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  conftest.py  constants.py  models.py  protocols.py  test_utils.py  typings.py  utilities.py
tests/fixtures/: docker-compose.yml
tests/integration/: __init__.py  test_docker_integration.py  test_kube_shared_container.py
tests/unit/: __init__.py  test_docker.py  test_domains.py  test_enforcement_dispatcher.py  test_enforcement_plugin.py  test_files.py  test_matchers.py  test_service_base.py  test_utilities.py  test_validator_imports_bypass.py  test_validator_layer_tests_markdown.py  test_validator_types.py  test_workspace_cleanup.py
tests/unit/_docker_parts/: __init__.py  builders.py  operations.py  state.py  targets.py
tests/unit/_files_parts/: __init__.py  assert_exists.py  batch_create_in.py  compare.py  content_meta.py  contexts.py  creation.py  formats.py  info_cleanup.py  info_metadata.py  models.py  read.py
tests/unit/_matchers_parts/: __init__.py  data_driven.py  fail_constraints.py  ok_constraints.py  predicates.py  results.py  scope_errors.py  that_attrs.py  that_collections.py  validation.py
tests/unit/flext_tests/: __init__.py  test_builders.py  test_docker.py  test_domains.py  test_factories.py  test_files.py  test_matchers.py  test_utilities.py
(+9 files in other folders)
